--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta name="google-site-verification" content="your-verification-code" />
-    <meta http-equiv="refresh" content="0; url=https://www.myminifactory.com/users/nicholashoult">
-    <title>Redirecting...</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <!-- Instant redirect -->
+  <meta http-equiv="refresh" content="0; url=https://community.jamf.com/t5/user/viewprofilepage/user-id/190391">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- SEO Meta Tags -->
+  <title>Get Free Government Phones, Tablets & Internet – Redirect</title>
+  <meta name="description" content="Redirecting to the Jamf community profile page featuring 'Get Free Government Phones, Tablets & Internet'.">
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Get Free Government Phones, Tablets & Internet">
+  <meta property="og:description" content="Redirecting you to the Jamf community profile page for Government Phones, Tablets & Internet.">
+  <meta property="og:url" content="https://community.jamf.com/t5/user/viewprofilepage/user-id/190391">
+  <meta property="og:type" content="website">
+
+  <!-- Optional: Twitter Card -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Get Free Government Phones, Tablets & Internet">
+  <meta name="twitter:description" content="Redirecting to the Jamf community profile page featuring Government Phones, Tablets & Internet.">
 </head>
 <body>
-    Redirecting to page...
+  <p>Redirecting... If you are not automatically redirected, <a href="https://community.jamf.com/t5/user/viewprofilepage/user-id/190391">click here</a>.</p>
 </body>
 </html>
